njt_nav_and_about

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,3 +1,16 @@
-<p>
-  navbar works!
-</p>
+<!DOCTYPE html>
+<html>
+<head>
+
+</head>
+<body id="rectangle">
+    <nav>
+        <ul>
+            <li class='home'><span routerLink="/landing">GardenTable</span></li>
+            <li class='shopUs'><span routerLink="/shop">Shop GardenTable</span></li>
+            <li class='aboutUs'><span routerLink="/about">About Us</span></li>
+            <li class='login'><span routerLink="/login">Login</span></li>
+        </ul>
+    </nav>
+</body>
+</html>
