--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,3 +1,8 @@
-<p>
-  about works!
-</p>
+<div class="aboutBox">
+  <h1 class="aboutUsTitle">About Us</h1>
+    <p class="ourStory">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores, qui. Sint, odio? Molestiae, eos dolorum nesciunt, architecto rerum ipsa at odio necessitatibus distinctio assumenda voluptate enim tenetur consequuntur? Natus, commodi?Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum enim mollitia sunt ex odit, sit possimus in debitis eveniet, dolore ipsum eligendi omnis at eaque beatae excepturi nemo tempore Lorem ipsum dolor, sit amet consectetur adipisicing elit. Harum doloremque non architecto molestias totam iste eaque alias incidunt quibusdam? Accusamus eveniet quae ad saepe deleniti sint praesentium quo molestiae! Earum.
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores, qui. Sint, odio? Molestiae, eos dolorum nesciunt, architecto rerum ipsa at odio necessitatibus distinctio assumenda voluptate enim tenetur consequuntur? Natus, commodi?Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum enim mollitia sunt ex odit, sit possimus in debitis eveniet, dolore ipsum eligendi omnis at eaque beatae excepturi nemo tempore Lorem ipsum dolor, sit amet consectetur adipisicing elit. Harum doloremque non architecto molestias totam iste eaque alias incidunt quibusdam? Accusamus eveniet quae ad saepe deleniti sint praesentium quo molestiae! Earum.
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores, qui. Sint, odio? Molestiae, eos dolorum nesciunt, architecto rerum ipsa at odio necessitatibus distinctio assumenda voluptate enim tenetur consequuntur? Natus, commodi?Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum enim mollitia sunt ex odit, sit possimus in debitis eveniet, dolore ipsum eligendi omnis at eaque beatae excepturi nemo tempore Lorem ipsum dolor, sit amet consectetur adipisicing elit. Harum doloremque non architecto molestias totam iste eaque alias incidunt quibusdam? Accusamus eveniet quae ad saepe deleniti sint praesentium quo molestiae! Earum.
+    </p>
+</div>
