--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <app-navbar></app-navbar>
-    <router-outlet></router-outlet
+    <router-outlet></router-outlet>
 </body>
 </html>
