--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -6,3 +6,15 @@
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores, qui. Sint, odio? Molestiae, eos dolorum nesciunt, architecto rerum ipsa at odio necessitatibus distinctio assumenda voluptate enim tenetur consequuntur? Natus, commodi?Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum enim mollitia sunt ex odit, sit possimus in debitis eveniet, dolore ipsum eligendi omnis at eaque beatae excepturi nemo tempore Lorem ipsum dolor, sit amet consectetur adipisicing elit. Harum doloremque non architecto molestias totam iste eaque alias incidunt quibusdam? Accusamus eveniet quae ad saepe deleniti sint praesentium quo molestiae! Earum.
     </p>
 </div>
+
+<div>
+        <form action="action_page.php">
+                <label for="fname">First Name</label>
+                <input type="text" id="fname" name="firstname" placeholder="Your name..">
+                <label for="lname">Last Name</label>
+                <input type="text" id="lname" name="lastname" placeholder="Your last name..">
+                <label for="subject">Subject</label>
+                <textarea id="subject" name="subject" placeholder="Write something.." style="height:200px"></textarea>
+                <input type="submit" value="Submit">
+        </form>
+    </div>
