--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,9 +1,4 @@
-<!DOCTYPE html>
-<html>
-<head>
-
-</head>
-<body id="rectangle">
+<div id="rectangle">
     <nav>
         <ul>
             <li class='home'><span routerLink="/landing">GardenTable</span></li>
@@ -12,5 +7,4 @@
             <li class='login'><span routerLink="/login">Login</span></li>
         </ul>
     </nav>
-</body>
-</html>
+</div>
