--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,14 +1,18 @@
-<h2>Login</h2>
-<form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
-    <div>
-        <label for="username">Username</label>
-        <input type="text" formControlName="email" />
-    </div>
-    <div class="form-group">
-        <label for="password">Password</label>
-        <input type="password" formControlName="password" />
-    </div>
-    <div class="form-group">
-        <button>Login</button>
-    </div>
-</form>
+<div class="wrapper">
+    <form class="form" [formGroup]="loginForm" (ngSubmit)="onSubmit()">
+        <div class="container">
+            <h2>Login</h2>
+            <div class="username">
+                <label class="usernameLabel" for="username">Username:</label>
+                <input class="usernameInput" type="text" formControlName="email" />
+            </div>
+            <div class="password">
+                <label class="passwordLabel" for="password">Password:</label>
+                <input class="passwordInput" type="password" formControlName="password" />
+            </div>
+            <div class="form-group">
+                <button class="loginButton">Login</button>
+            </div>
+        </div>
+    </form>
+</div>
