--- a/src/app/landing/landing.component.css
+++ b/src/app/landing/landing.component.css
@@ -3,21 +3,33 @@ html { font-family: 'Inter UI', sans-serif; }
 @supports (font-variation-settings: normal) {
   html { font-family: 'Inter UI var alt', sans-serif; }
 }
-.div{
-float: middle;
-width: 10vw;
-height: 100%;
-max-width: 50vw;
+.background{
+  height: 100vh;
+  width:100%;
+  max-height: 100%;
+  margin:auto;
+  background: url(./better2xTemplebg.png), no-repeat;
+  background-size: cover;
+}
+#Layer_1{
+  width: 100%;
+  height: 25vh;
+  padding: 10em;
+  margin-left: 30em;
+  margin-top:5em;
 }
 
- button {
-        background-color: #66AE4F;
+button {
+  transform: translate(1300px, -20px);
+  font-size: 24px; 
+        background-color: #21CF7C;
         border: none;
-        padding: 5px 10px;
+        padding: 15px 30px;
         border-radius: 1000px;
         cursor: pointer;
         cursor: hand;
         font-family:'Inter UI', sans-serif;
+        font-weight: 800;
         outline: none;
         float: middle;
         color:#FFF;
@@ -27,4 +39,3 @@ max-width: 50vw;
         color:rgb(223, 222, 222);
 
       }
-      
