--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,3 +1,4 @@
+<div class="background"></div>
 <div class="wrapper">
     <form class="form" [formGroup]="loginForm" (ngSubmit)="onSubmit()">
         <div class="container">
