--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -1,3 +1,13 @@
+.background{
+    height: 100vh;
+    width:100%;
+    max-height: 100%;
+    margin:auto;
+    background: url(./clean_about.jpeg) no-repeat;
+    background-size: cover;
+    position: fixed;
+  }
+  
 .wrapper {
     margin-top: 30vh;
     text-align: center;
@@ -5,7 +15,7 @@
 
 .form {
     margin: 0 auto;
-    width: 40vw;
+    width: 30vw;
     height: 20vh;
     box-shadow: 0 8px 16px 0 rgba(102, 174, 79, .9);
     background-color: rgba(102, 174, 79, .1);
