--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -168,7 +168,7 @@ nav a:hover {
     position: relative;
   }
 
-  /* nav a::before {
+  nav a::before {
     content: '';
     display: block;
     height: 5px;
@@ -184,5 +184,5 @@ nav a:hover {
   nav a:hover::before {
     transform: scale(1, 1);
   }
-  */
+ 
 }
