--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -92,6 +92,11 @@ nav {
   transition: 400ms ease-in-out;
 }
 
+.links {
+  margin-right: 0;
+}
+
+
 nav ul {
   transform: translate(7em, -4.5em);
   margin: 0;
@@ -136,7 +141,8 @@ nav a:hover {
     /* text-align: center; */
     position: fixed;
     z-index: 999;
-    width: 100%;  }
+    width: 100%;
+  }
 
   #logo {
     grid-column: 1 / 3;
@@ -147,7 +153,6 @@ nav a:hover {
     grid-column: 4 / 4;
     display: flex;
     margin-left: 10em;
-    justify-content: flex-end;
     align-items: left;
   }
 
@@ -168,21 +173,4 @@ nav a:hover {
     position: relative;
   }
 
-  /* nav a::before {
-    content: '';
-    display: block;
-    height: 5px;
-    background: white;
-    position: absolute;
-    top: -.75em;
-    left: 0;
-    right: 0;
-    transform: scale(0, 1);
-    transition: ease-in-out 250ms;
-  }
-
-  nav a:hover::before {
-    transform: scale(1, 1);
-  }
-  */
 }
