--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -3,53 +3,16 @@
         <div class="aboutBox">
             <h1 class="aboutUsTitle">About Us</h1>
             <p class="ourStory">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores, qui. Sint, odio? Molestiae, eos
-                dolorum
-                nesciunt, architecto rerum ipsa at odio necessitatibus distinctio assumenda voluptate enim tenetur
-                consequuntur? Natus, commodi?Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum enim
-                mollitia
-                sunt
-                ex odit, sit possimus in debitis eveniet, dolore ipsum eligendi omnis at eaque beatae excepturi nemo
-                tempore
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Harum doloremque non architecto molestias
-                totam
-                iste
-                eaque alias incidunt quibusdam? Accusamus eveniet quae ad saepe deleniti sint praesentium quo
-                molestiae!
-                Earum.
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores, qui. Sint, odio? Molestiae, eos
-                dolorum
-                nesciunt, architecto rerum ipsa at odio necessitatibus distinctio assumenda voluptate enim tenetur
-                consequuntur? Natus, commodi?Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum enim
-                mollitia
-                sunt
-                ex odit, sit possimus in debitis eveniet, dolore ipsum eligendi omnis at eaque beatae excepturi nemo
-                tempore
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Harum doloremque non architecto molestias
-                totam
-                iste
-                eaque alias incidunt quibusdam? Accusamus eveniet quae ad saepe deleniti sint praesentium quo
-                molestiae!
-                Earum.
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores, qui. Sint, odio? Molestiae, eos
-                dolorum
-                nesciunt, architecto rerum ipsa at odio necessitatibus distinctio assumenda voluptate enim tenetur
-                consequuntur? Natus, commodi?Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum enim
-                mollitia
-                sunt
-                ex odit, sit possimus in debitis eveniet, dolore ipsum eligendi omnis at eaque beatae excepturi nemo
-                tempore
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Harum doloremque non architecto molestias
-                totam
-                iste
-                eaque alias incidunt quibusdam? Accusamus eveniet quae ad saepe deleniti sint praesentium quo
-                molestiae!
-                Earum.
+                Our founder, Tyler Shelton, has a knack for gardening! No matter what climate you are in, he can help you acheieve your garden dreams.
+                Over the years Tyler has spent time traveling to many parts of the world to see how people from other climates are able to grow vegetation 
+                and produce beautiful flowers. He will personally guarentee that using our seeds will make some of the worlds most beautiful flowers, and 
+                the tastiest vegetables you have ever grown! 
             </p>
         </div>
 
         <div class="formWrapper">
             <form class="form" action="action_page.php">
+                <h1> Contact Us!</h1>
                 <div class="inputs">
                     <label class="fName" for="fname">First Name:</label>
                     <input class="fNameInput" type="text" name="firstname" placeholder="Your name..">
