--- a/src/app/shop/shop.component.html
+++ b/src/app/shop/shop.component.html
@@ -1,6 +1,6 @@
 <div class="background">
-  <h1 class="header">The Garden</h1>
-  <hr />
+  <h1 class="header">Our Garden, Your Choice</h1>
+  <!-- <hr /> -->
   <div class="mainDiv">
     <div class="card" *ngFor="let plant of plants">
       <div class="container">
