--- a/src/app/about/about.component.css
+++ b/src/app/about/about.component.css
@@ -1,19 +1,19 @@
 .background {
-    background-image: url("./about-bkg.jpeg");
+    background-image: url("./cactus-nice.jpeg");
     background-repeat: no-repeat;
     background-size: cover;
 }
 
 .container {
-    margin-top: 8vh;
+    margin-top: 4vh;
 }
 
 .aboutBox{
-    width: 90em;
-    height: 30em;
-    margin-left: 15em;
+    width: 45em;
+    height: 25em;
+    margin-left: 35em;
     background-color: rgba(255, 255, 255, 0.5);
-    box-shadow: 0 8px 16px 0 rgba(102, 174, 79, .9);
+    box-shadow: 0 8px 16px 0 rgba(102, 174, 79, .5);
 }
 
 .ourStory{
@@ -37,7 +37,7 @@
     display: inline-block;
     width: 20vw;
     padding: 2em;
-    box-shadow: 0 8px 16px 0 rgba(102, 174, 79, .9);
+    box-shadow: 0 8px 16px 0 rgba(102, 174, 79, .6);
 }
 
 .fName {
