--- a/src/app/landing/landing.component.css
+++ b/src/app/landing/landing.component.css
@@ -3,6 +3,7 @@ html { font-family: 'Inter UI', sans-serif; }
 @supports (font-variation-settings: normal) {
   html { font-family: 'Inter UI var alt', sans-serif; }
 }
+
 .background{
   height: 100vh;
   width:100%;
@@ -14,7 +15,7 @@ html { font-family: 'Inter UI', sans-serif; }
 #Layer_1{
   width: 100%;
   height: 25vh;
-  transform: translate(575px, 200px);
+  transform: translate(35em, 11em);
   position: fixed;
 
 }
@@ -31,12 +32,12 @@ html { font-family: 'Inter UI', sans-serif; }
   color: #21CF7C;
   position: fixed;
   text-align: center;
-  transform: translate(1160px, 410px);
+  transform: translate(24em,8.3em);
   
 }
 
 button {
-  transform: translate(1259px, 620px);
+  transform: translate(52em, 25em);
   font-size: 24px; 
         background-color: #21CF7C;
         border: none;
